--- a/package.json
+++ b/package.json
@@ -1,23 +1,16 @@
 {
-  "name": "nextra-docs-template",
+  "name": "documentation",
   "version": "0.0.1",
-  "description": "Nextra docs template",
+  "description": "Lecca.io documentation",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/shuding/nextra-docs-template.git"
-  },
-  "author": "Shu Ding <g@shud.in>",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/shuding/nextra-docs-template/issues"
-  },
-  "homepage": "https://github.com/shuding/nextra-docs-template#readme",
+  "author": "Tony Ramirez",
+  "homepage": "https://docs.lecca.io",
   "dependencies": {
+    "@vercel/analytics": "^1.2.2",
     "next": "^13.0.6",
     "nextra": "latest",
     "nextra-theme-docs": "latest",
